--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,21 @@ DISCORD_BOT_TOKEN = YOUR_TOKEN_HERE
 
 
 # ========== 베타 이미지 URL (IMAGE_URL) ==========
+# 기본 이미지는 디스코드 개발자 포털에서 개별로 변경.
 # 디스코드 이미지 URL 등 저장되어 있는 이미지의 URL을 복사하여 사용.
 
 # 인사 관련 이미지 URL
 # 1. 기본 베타 관련 이미지 URL
 HELLO_BETA_IMAGE_URL = YOUR_IMAGE_URL_HERE
+
+# 2. 크리스마스 베타 관련 이미지 URL
+HELLO_CHRISTMAS_BETA_IMAGE_URL = YOUR_IMAGE_URL_HERE
+
+# 3. 새해 베타 관련 이미지 URL
+HELLO_NEW_YEAR_BETA_IMAGE_URL = YOUR_IMAGE_URL_HERE
+
+# 4. 봄(봄맞이) 베타 관련 이미지 URL
+HELLO_SPRING_BETA_IMAGE_URL = YOUR_IMAGE_URL_HERE
 # ====================
 
 
